--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -213,6 +213,12 @@ endblock %} {% block content %}
       </div>
     </div>
 
+    <div class="row mt-4">
+      <div class="col-12">
+        <canvas id="totalTransaksiChart" height="100"></canvas>
+      </div>
+    </div>
+
     {% endblock %}
   </div>
 </div>
